test/libsolidity/syntaxTests/nameAndTypeResolution/156_array_copy_with_different_types_dynamic_static.sol
contract c {
    uint[] a;
    uint[80] b;
    function f() public { b = a; }
}
// ----
// TypeError 7407: (73-74): Type uint[] storage ref is not implicitly convertible to expected type uint[80] storage ref.
